--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express-session": "^1.17.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.12.4",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   }
